[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { features = ["axum_extras"], version = "4.2.0" }
utoipa-swagger-ui = { features = ["axum"], version = "6.0.0" }
log = "0.4.21"