[package]
name = "rust-test"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.6"}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
log = "0.4.2"